--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
     <div class="container">
-        <h1>Player X's turn</h1>
+        <h1>Player <span id='player'>X</span> turn</h1>
         <div class="grid-container">
-            <div id="item-0" class="item"></div>
-            <div id="item-1" class="item"></div>
-            <div id="item-2" class="item"></div>
-            <div id="item-3" class="item"></div>
-            <div id="item-4" class="item"></div>
-            <div id="item-5" class="item"></div>
-            <div id="item-6" class="item"></div>
-            <div id="item-7" class="item"></div>
-            <div id="item-8" class="item"></div>
+            <div id = '0' class="item item-1"></div>
+            <div id = '1' class="item item-2"></div>
+            <div id = '2' class="item item-3"></div>
+            <div id = '5' class="item item-4"></div>
+            <div id = '4' class="item item-5"></div>
+            <div id = '3' class="item item-6"></div>
+            <div id = '6' class="item item-7"></div>
+            <div id = '7' class="item item-8"></div>
+            <div id = '8' class="item item-9"></div>
         </div>
     </div>
     <script src='script.js'></script>
