--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Tic-Tac-Toe</h1>
+      <h1>Tic-Tac-Toe</h1>
     </header>
     <div class="container">
-        <h1>Player <span id='player'>X</span> turn</h1>
-        <div class="grid-container">
-            <div id = '0' class="item item-1"></div>
-            <div id = '1' class="item item-2"></div>
-            <div id = '2' class="item item-3"></div>
-            <div id = '5' class="item item-4"></div>
-            <div id = '4' class="item item-5"></div>
-            <div id = '3' class="item item-6"></div>
-            <div id = '6' class="item item-7"></div>
-            <div id = '7' class="item item-8"></div>
-            <div id = '8' class="item item-9"></div>
-        </div>
+      <h1>Player <span id="player">X</span> turn</h1>
+      <div class="grid-container">
+        <div id="0" class="item item-1"></div>
+        <div id="1" class="item item-2"></div>
+        <div id="2" class="item item-3"></div>
+        <div id="5" class="item item-4"></div>
+        <div id="4" class="item item-5"></div>
+        <div id="3" class="item item-6"></div>
+        <div id="6" class="item item-7"></div>
+        <div id="7" class="item item-8"></div>
+        <div id="8" class="item item-9"></div>
+      </div>
     </div>
-    <script src='script.js'></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
